tôi cần đi ngủ. xin phép ngừng fix tại đây. xin cảm ơn